...
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/parent_profile_id_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        app:layout_constraintBottom_toBottomOf="@id/parent_profile_build_button"
        app:layout_constraintEnd_toStartOf="@id/parent_profile_build_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/parent_profile_build_button" />

    <Button
        android:id="@+id/parent_profile_build_button"
...
